fix ugly outline and overall : fix blurry text

--- a/views/js/pciCreator/dev/snap/runtime/css/SnapForTao.css
+++ b/views/js/pciCreator/dev/snap/runtime/css/SnapForTao.css
@@ -14,6 +14,10 @@
     overflow: scroll; 
   }
 
+  .SnapForTao .snapy .world{
+    outline: none; 
+  }
+
 .SnapForTao .snapy .bg_try_stop {
     width : 100% ; 
     height: 100% ; 
